# switch-yard

./: LICENSE  README.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/switchyard-core/: Cargo.toml
src-tauri/crates/switchyard-core/src/: lib.rs
src-tauri/src/: commands.rs  lib.rs  panel.rs  watcher.rs
src/lib/: tauri.ts  types.ts
