[package]
name = "switchyard"
version = "0.1.0"
description = "Switchyard desktop shell"
authors = ["pilotlab"]
edition = "2021"
license = "MIT"

[workspace]
members = ["crates/switchyard-core"]

[lib]
name = "switchyard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
notify = "8.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
switchyard-core = { path = "crates/switchyard-core" }
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-positioner = { version = "2.3.1", features = ["tray-icon"] }
